import io.github.fvarrui.javapackager.gradle.PackageTask

buildscript {
    repositories {
        mavenCentral()
        gradlePluginPortal()
    }
    dependencies {
        classpath('io.github.fvarrui:javapackager:1.7.6')
    }
}

plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '3.0.0'
    id 'org.jetbrains.kotlin.jvm'
    id 'io.github.fvarrui.javapackager.plugin' version '1.7.6'
}


group 'com.sunkenpotato'
version '1.0.0'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = 21
    targetCompatibility = 21
}

ext {
    junitVersion = '5.10.2'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

mainClassName = 'com.sunkenpotato.client2p.MainApplication'

application {
    mainModule = 'com.sunkenpotato.client2p'
    mainClass = mainClassName
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml']
}


dependencies {
    implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
    implementation 'io.github.mkpaz:atlantafx-base:2.0.1'
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'org.kordamp.ikonli:ikonli-feather-pack:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages', '--module-path', '/Users/piro/Downloads/javafx-sdk-21.0.4/lib',
        '--add-modules']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}

kotlin {
    jvmToolchain(21)
}

tasks.register('packageMyApp', PackageTask) {
    dependsOn build
    mainClass = mainClassName
    bundleJre = true
    customizedJre = true
    modules = ['javafx.controls', 'javafx.fxml']
}

